force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/stockingunitvol__c.field-meta.xml
<CustomField>
    <fullName>stockingunitvol__c</fullName>
    <label>StockingUnitVol</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>