force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/supplementaryunit__c.field-meta.xml
<CustomField>
    <fullName>supplementaryunit__c</fullName>
    <label>SupplementaryUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>