force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/trfcostmultiply__c.field-meta.xml
<CustomField>
    <fullName>trfcostmultiply__c</fullName>
    <label>TrfCostMultiply</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>