force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/unitcost__c.field-meta.xml
<CustomField>
    <fullName>unitcost__c</fullName>
    <label>UnitCost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>