force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/zeroqtycrnote__c.field-meta.xml
<CustomField>
    <fullName>zeroqtycrnote__c</fullName>
    <label>ZeroQtyCrNote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>